group 'jdk.incubator'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

configure(allprojects) { project ->

    apply plugin: 'maven'
    apply plugin: 'java'
    apply plugin: 'java-library'

    sourceCompatibility = 1.9
    targetCompatibility = 1.9

    repositories {
        mavenCentral()
    }

    dependencies {
        testCompile group: 'junit', name: 'junit', version: '4.12'
        testCompile group: 'org.testng', name: 'testng', version: '6.11'
    }
}

subprojects {
    afterEvaluate {
        repositories {
            jcenter()
        }

        gradle.projectsEvaluated {
            tasks.withType(JavaCompile) {
                options.compilerArgs.add("-Xlint:unchecked")
                options.compilerArgs.add("-Xlint:deprecation")
                options.compilerArgs.addAll(["--add-modules", "jdk.incubator.httpclient"])
            }
        }

        compileTestJava {
            doFirst {
                options.compilerArgs = [
                        '--add-modules', 'jdk.incubator.httpclient',
                ]
            }
        }
    }
}

